--- a/src/Digitalroot.Valheim.ForsakenJVL/Digitalroot.Valheim.ForsakenJVL.csproj
+++ b/src/Digitalroot.Valheim.ForsakenJVL/Digitalroot.Valheim.ForsakenJVL.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.5.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HarmonyX.2.5.5\lib\net45\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="assembly_googleanalytics, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Pfhoenix.Valheim.ModProjectReferences.1.0.8\lib\net46\assembly_googleanalytics.dll</HintPath>
@@ -392,10 +393,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CMB_BurnWhenHeld.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Translations\English\translations.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="FodyWeavers.xsd">
       <SubType>Designer</SubType>
     </None>
