--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,10 @@ on:
   push:
     branches: [ main ] # Default release branch
     paths:
-      - 'src/**'   
-      - '.github/workflows/**' 
+      - '!.github/**'
+      - '!docs/**'
+      - '!**/.ts/**'   
+      - '!**/.nx/**'   
 
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
