--- a/src/Digitalroot.Valheim.ForsakenJVL/Digitalroot.Valheim.ForsakenJVL.csproj
+++ b/src/Digitalroot.Valheim.ForsakenJVL/Digitalroot.Valheim.ForsakenJVL.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <AssemblyName>Digitalroot.Valheim.ForsakenJVL</AssemblyName>
-    <TargetFrameworks>net462</TargetFrameworks>
-    <LangVersion>9</LangVersion>
+    <TargetFrameworks>net48</TargetFrameworks>
+    <LangVersion>10</LangVersion>
     <RootNamespace>Digitalroot.Valheim.ForsakenJVL</RootNamespace>
     <IsPublishable>False</IsPublishable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
@@ -12,7 +12,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
-    <Copyright>Copyright © Digitalroot Technologies 2021 - 2023</Copyright>
+    <Copyright>Copyright © Digitalroot Technologies 2021 - 2024</Copyright>
     <PackageProjectUrl>https://github.com/Digitalroot-Valheim/Digitalroot.Valheim.ForsakenJVL</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Digitalroot-Valheim/Digitalroot.Valheim.ForsakenJVL</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -28,7 +28,7 @@
       https://digitalroot-valheim-nuget.s3.us-west-2.amazonaws.com/index.json
     </RestoreAdditionalProjectSources>
     <VersionPrefix>0.0.1</VersionPrefix>
-    <Configurations>Debug;Release;DebugNoDeploy</Configurations>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -48,18 +48,18 @@
     <PackageReference Include="Digitalroot.Valheim.Build.Targets" Version="1.0.21">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Digitalroot.Valheim.Common.AssemblyInfo" Version="1.0.15">
+    <PackageReference Include="Digitalroot.Valheim.Common.AssemblyInfo" Version="1.0.16">
       <PrivateAssets>all</PrivateAssets>
       <ExcludeAssets>runtime</ExcludeAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Digitalroot.Valheim.Common.Log" Version="1.1.44" />
-    <PackageReference Include="Digitalroot.Valheim.Common.Names" Version="1.4.16" />
-    <PackageReference Include="Digitalroot.Valheim.Common.References" Version="0.217.25">
+    <PackageReference Include="Digitalroot.Valheim.Common.Log" Version="1.1.46" />
+    <PackageReference Include="Digitalroot.Valheim.Common.Names" Version="1.4.18" />
+    <PackageReference Include="Digitalroot.Valheim.Common.References" Version="0.217.30">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Digitalroot.Valheim.Common.Utils" Version="1.0.53" />
-    <PackageReference Include="Digitalroot.Valheim.References.JvL" Version="2.14.4" />
+    <PackageReference Include="Digitalroot.Valheim.Common.Utils" Version="1.0.55" />
+    <PackageReference Include="Digitalroot.Valheim.References.JvL" Version="2.14.6" />
     <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
