Set <InvariantGlobalization>true</InvariantGlobalization>

--- a/src/Digitalroot.Valheim.ForsakenJVL/Digitalroot.Valheim.ForsakenJVL.csproj
+++ b/src/Digitalroot.Valheim.ForsakenJVL/Digitalroot.Valheim.ForsakenJVL.csproj
@@ -29,6 +29,7 @@
     </RestoreAdditionalProjectSources>
     <VersionPrefix>0.0.1</VersionPrefix>
     <Configurations>Debug;Release</Configurations>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
